-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.5.4
-
-
b4147824c (dev), 7d1611177 (dev), b3806b281 (6.7), ef697ea95 (6.6), e132e6cc1 (tqtc/lts-6.5), 2fe57dae0 (6.7), fce7ad6ca (6.6), d448602e8 (tqtc/lts-6.5)
When loading a certain .wav file, QSoundEffect's status hangs on Loading and does not proceed or allow you to play the QSoundEffect.
The .wav file can be played using media players and other .wav files can be loaded with no issues.
See the attached sample project.
- relates to
-
QTBUG-122750 [Regression] QSoundEffect cuts audio with FFmpeg backend
-
- Closed
-
For Gerrit Dashboard: QTBUG-122193 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
543311,4 | Fix QWaveDecoder handling of padding bytes in RIFF chunks | dev | qt/qtmultimedia | Status: MERGED | +2 | 0 |
543316,2 | Set correct sample rate and channel count with big endian WAV data | dev | qt/qtmultimedia | Status: MERGED | +2 | 0 |
543563,2 | Set correct sample rate and channel count with big endian WAV data | 6.7 | qt/qtmultimedia | Status: MERGED | +2 | 0 |
543564,2 | Fix QWaveDecoder handling of padding bytes in RIFF chunks | 6.7 | qt/qtmultimedia | Status: MERGED | +2 | 0 |
543751,2 | Set correct sample rate and channel count with big endian WAV data | 6.6 | qt/qtmultimedia | Status: MERGED | +2 | 0 |
543778,2 | Set correct sample rate and channel count with big endian WAV data | tqtc/lts-6.5 | qt/tqtc-qtmultimedia | Status: MERGED | +2 | 0 |
544344,2 | Fix QWaveDecoder handling of padding bytes in RIFF chunks | 6.6 | qt/qtmultimedia | Status: MERGED | +2 | 0 |
544413,2 | Fix QWaveDecoder handling of padding bytes in RIFF chunks | tqtc/lts-6.5 | qt/tqtc-qtmultimedia | Status: MERGED | +2 | 0 |