Fix QWaveDecoder handling of padding bytes in RIFF chunks

This patch adds support for reading WAV files with odd sized payloads in
QWaveDecoder. This allows playing WAV files that contains odd-sized
chunks before the 'data' chunk that contains the audio data.

According to the specification, Multimedia Programming Interface and
Data Specifications 1.0. IBM / Microsoft. pp. 10-11, the payload of RIFF
chunks should be padded to an even length, so the fix is to round odd
payload sizes up to next even size.

Tests are extended with two files where a bext section patched in. One
file has an odd length bext chunk with padding byte, the second file
has an even length bext chunk without padding byte.

Fixes: QTBUG-122193
Change-Id: I6940db47db91a61e6b97f8f41043b2967b0d155a
Reviewed-by: Mikko Hallamaa <mikko.hallamaa@qt.io>
Reviewed-by: Artem Dyomin <artem.dyomin@qt.io>
Reviewed-by: Tim Blechmann <tim@klingt.org>
(cherry picked from commit 7d16111777350deec9ebc5ee1f08288af19534e2)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit 2fe57dae028205b118670e4aa4293d4f8aa14744)
(cherry picked from commit fce7ad6ca769c829a4e68d6c7b4df0ae60900a80)